--- a/.github/workflows/release-prerelease.yml
+++ b/.github/workflows/release-prerelease.yml
@@ -13,7 +13,7 @@ on:
         type: string
         default: '1'
       auto_changelog:
-        description: 'Auto-generate changelog from last primary release'
+        description: 'Auto-generate changelog from last stable release'
         required: false
         type: boolean
         default: true
