--- a/.github/workflows/release-bump-master-version.yml
+++ b/.github/workflows/release-bump-master-version.yml
@@ -79,7 +79,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.REPO_WRITE_TOKEN }}
-          commit-message: chore: Set development version to ${{ steps.compute.outputs.new_dev_version }} [skip ci]
+          commit-message: "chore: Set development version to ${{ steps.compute.outputs.new_dev_version }} [skip ci]"
           branch: ${{ steps.compute.outputs.new_branch_name }}
           base: master
           title: "chore: Sync master version to ${{ steps.compute.outputs.new_dev_version }}"
