--- a/.github/workflows/release-bump-master-version.yml
+++ b/.github/workflows/release-bump-master-version.yml
@@ -72,7 +72,13 @@ jobs:
             echo "skip_pr=false" >> $GITHUB_OUTPUT
           fi
         id: commit_check
-
+        
+      # ADDED: This is the essential fix to ensure the branch exists remotely before the PR action checks for it.
+      - name: Push New Branch to Remote
+        if: ${{ steps.commit_check.outputs.skip_pr == 'false' }}
+        run: |
+          git push origin ${{ steps.compute.outputs.new_branch_name }}
+          
       - name: Create Pull Request to Master
         # Only run if the commit_check step confirms changes were made.
         if: ${{ steps.commit_check.outputs.skip_pr == 'false' }}
