--- a/.github/workflows/release-bump-master-version.yml
+++ b/.github/workflows/release-bump-master-version.yml
@@ -83,10 +83,10 @@ jobs:
           BRANCH="${{ steps.compute.outputs.new_branch_name }}"
           TITLE="chore: Sync master version to ${{ steps.compute.outputs.new_dev_version }}"
 
-          # 1. Push the local branch to the remote (This solves the "unknown revision" error)
+          # 1. Push the local branch to the remote (This is essential and replaces the failed action's logic)
           git push origin $BRANCH
 
-          # 2. Define the multiline body content carefully
+          # 2. Define the multiline body content
           PR_BODY="This is an **automated Pull Request** triggered by the publication of the stable release **${{ github.event.release.tag_name }}**.
 
           This PR updates the version numbers in \`pyproject.toml\` and \`geemap/__init__.py\` from the stable version to **\`${{ steps.compute.outputs.new_dev_version }}\`**. This is done to indicate that the master branch is now tracking the next development cycle.
